# domain/responseModel.go
@@ -7,7 +7,7 @@ import (
 )
 
 type UserResponse struct {
-	ID           string `json:"id"`
+	User_ID      string `json:"user_id"`
 	First_Name   string `json:"first_name"`
 	Last_Name    string `json:"last_name"`
 	Email        string `json:"email"`
@@ -18,7 +18,7 @@ type UserResponse struct {
 	Verification bool   `json:"verification"`
 }
 type ProductResponse struct {
-	ID            string  `json:"id"`
+	Product_Code  string  `json:"product_code"`
 	Item          string  `json:"item"`
 	Product_Name  string  `json:"product_name"`
 	Discription   string  `json:"discription"`
@@ -39,7 +39,9 @@ type SignedDetails struct {
 	jwt.StandardClaims
 }
 type WishListResponse struct {
-	ID            int    `json:"id"`
+	Wishlist_ID   string `json:"wishlist_id"`
+	Product_Code  string `json:"product_code"`
+	User_ID       string `json:"user_id"`
 	Item          string `json:"item"`
 	Product_Name  string `json:"product_name"`
 	Product_Image string `json:"product_image"`
@@ -48,36 +50,37 @@ type WishListResponse struct {
 	Status        string `json:"status"`
 }
 type CartResponse struct {
-	User_id       int     `json:"user_id"`
-	Product_id    int     `json:"product_id"`
+	Cart_ID       string  `json:"cart_id"`
+	User_id       string  `json:"user_id"`
+	Product_id    string  `json:"product_id"`
 	Item          string  `json:"item"`
 	Product_Name  string  `json:"product_name"`
 	Product_Image string  `json:"product_image"`
 	Size          string  `json:"size" gorm:"not null"`
 	Color         string  `json:"color" gorm:"not null"`
-	Count         int     `json:"count"`
+	Quantity      int     `json:"quantity"`
+	Unit_Price    float32 `json:"unit_price"`
 	TotalPrice    float32 `json:"total_price"`
 	Status        string  `json:"status"`
 }
 type ShippingDetailsResponse struct {
-	ID        int    `json:"id"`
-	User_ID   int    `json:"user_id"`
-	Name      string `json:"name"`
-	Email     string `json:"email"`
-	Phone     string `json:"phone"`
-	City      string `json:"city"`
-	Street    string `json:"street"`
-	Address   string `json:"address"`
-	Pin_code  string `json:"pin_code"`
-	Land_Mark string `json:"land_mark"`
+	Shipping_ID string `json:"shipping_id"`
+	User_ID     string `json:"user_id"`
+	Name        string `json:"name"`
+	Email       string `json:"email"`
+	Phone       string `json:"phone"`
+	City        string `json:"city"`
+	Street      string `json:"street"`
+	Address     string `json:"address"`
+	Pin_code    string `json:"pin_code"`
+	Land_Mark   string `json:"land_mark"`
 }
 
 type CouponResponse struct {
-	ID              uint      `json:"coupon_id"`
 	Coupon_Code     string    `json:"coupon_code"`
 	Discount_amount float32   `json:"discount_amount"`
-	User_ID         uint      `json:"user_id"`
-	Product_ID      uint      `json:"product_id"`
+	User_ID         string    `json:"user_id"`
+	Product_ID      string    `json:"product_id"`
 	Min_Cost        float32   `json:"min_cost"`
 	Expires_At      time.Time `json:"expires_at"`
 	Coupon_Status   string    `json:"coupon_status"`
